--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -27,7 +27,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        python -m pip install flake8 pytest torch torchvision pytorch-lightning vit-pytorch
+        python -m pip install flake8 pytest torch torchvision lightning vit-pytorch
         python -m pip install -e .
     - name: Lint with flake8
       run: |
